--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -30,7 +30,7 @@ jobs:
           from rdflib.namespace import OWL
           from rdflib.namespace import XSD
           try:
-            q = prepareQuery(sys.argv[1], initNs={"foaf": FOAF ,"rdfs": RDFS, "rdf": RDF, "owl": OWL, "xsd": XSD},)
+            q = prepareQuery(sys.argv[0], initNs={"foaf": FOAF ,"rdfs": RDFS, "rdf": RDF, "owl": OWL, "xsd": XSD},)
             print("Syntax is correct")
           except Exception as error:
             print(error)
@@ -39,4 +39,4 @@ jobs:
             echo "SPARQL Syntax check result is: $validator_result"
           }
           my_query=my_query="SELECT ?info ?name WHERE { ?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
-          SPARQL_Validator my_query
+          SPARQL_Validator $my_query
