--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-        my_query: No query
+        query: No query
         
     steps:
       - uses: actions/checkout@v1
@@ -38,5 +38,5 @@ jobs:
           )"
             echo "SPARQL Syntax check result is: $validator_result"
           }
-          my_query="SELECT ?info ?name WHERE { ?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
-          SPARQL_Validator $my_query
+          query="SELECT ?info ?name WHERE { ?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
+          SPARQL_Validator $query
