--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -30,6 +30,7 @@ jobs:
           from rdflib.namespace import OWL
           from rdflib.namespace import XSD
           print(sys.argv[0])
+          print("Test check")
           try:
             q = prepareQuery(sys.argv[0], initNs={"foaf": FOAF ,"rdfs": RDFS, "rdf": RDF, "owl": OWL, "xsd": XSD},)
             print("Syntax is correct")
