--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run SPARQL validator
         run: |
           function SPARQL_Validator () {
-            validator_result="$(  python3 - <<END
+            validator_result="$( $query python3 - <<END
           import os
           import sys
           import rdflib
