--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -39,6 +39,7 @@ jobs:
           )"
             echo $validator_result
           }
+          query="SELECT ?info ?name WHERE { ?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
           SPARQL_Validator "$query"
           
           
