--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-        query: No query
+        query: SELECT ?info ?name WHERE { ?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}
         
     steps:
       - uses: actions/checkout@v1
@@ -39,7 +39,6 @@ jobs:
           )"
             echo $validator_result
           }
-          query="SELECT ?info ?name WHERE { ?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
           SPARQL_Validator "$query"
           
           
