--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -5,9 +5,6 @@ on: push
 jobs:
   validate-SPARQL:
     runs-on: ubuntu-latest
-    
-    env:
-        json: No text
         
     steps:
       - uses: actions/checkout@v1
@@ -34,4 +31,5 @@ jobs:
           )"
             echo $validator_result
           }
+          json="""{ "head": { "vars": [ "interest" ] }, "results": { "bindings": [{ "interest": { "type": "uri", "value": "https://w3id.org/OWLunit/examples/Basketball" } } ] } }"""
           JSON_Validator "$json"
