--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -27,5 +27,6 @@ jobs:
           )"
             echo $validator_result
           }
+          echo $json
           json='"""{ "head": { "vars": [ "interest" ] }, "results": { "bindings": [{ "interest": { "type": "uri", "value": "https://w3id.org/OWLunit/examples/Basketball" } } ] } }"""'
           JSON_Validator "$json"
