--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -32,7 +32,7 @@ jobs:
             printf "%q\n" "$@"
             }
           json=$(MAGIC """{ "head": { "vars": [ "interest" ] }, "results": { "bindings": [{ "interest": { "type": "uri", "value": "https://w3id.org/OWLunit/examples/Basketball" } } ] } }""")
-          
+          echo $json
           JSON_Validator "$json"
           
           
