--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -28,10 +28,7 @@ jobs:
             echo $validator_result
           }
           
-          MAGIC () {
-            printf "%q\n" "$@"
-            }
-          json=$(MAGIC '''{ "head": { "vars": [ "interest" ] }, "results": { "bindings": [{ "interest": { "type": "uri", "value": "https://w3id.org/OWLunit/examples/Basketball" } } ] } }''')
+          json='"""{ "head": { "vars": [ "interest" ] }, "results": { "bindings": [{ "interest": { "type": "uri", "value": "https://w3id.org/OWLunit/examples/Basketball" } } ] } }"""'
           echo $json
           JSON_Validator "$json"
           
