--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -30,5 +30,6 @@ jobs:
           }
           
           json='"""{ "head": { "vars": ["recording" ] } , "results": { "bindings": [ {  "recording": { "type":  "uri" ,  "value": "https://raw.githubusercontent.com/YourUsername/YourRepository/main/ontology-network/musical-performance/RecordingProcess/SPARQLUnitTest/CQDataSet/ComeWithMe" } } ] } }"""'
+          echo $json
           JSON_Validator "$json"
           
