--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -16,7 +16,8 @@ jobs:
           import os
           import sys
           import json
-
+          print(os.environ['PYTHON_ARG'])
+          
           try:
             json.loads(os.environ['PYTHON_ARG'])
             print("Syntax is correct")
