--- a/.github/workflows/CQ-val.yml
+++ b/.github/workflows/CQ-val.yml
@@ -11,12 +11,15 @@ jobs:
       
       - name: Run CQ validator
         run: |
+          echo "$cqPath"
           cqPath="ontology-network/musical-performance/RecordingProcess/CompetencyQuestions.txt"
           cqRequirements=$(grep -i '[CQ][0-9][0-9]*:\s' $cqPath)
           
+          echo "$sparqlPath"
           sparqlPath="ontology-network/musical-performance/RecordingProcess/SPARQLQueries.txt"
           sparqlCQRequirements=$(grep -i '[SQCQ][0-9][0-9]*:\s' $sparqlPath)
           
+          echo "$erPath"
           erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
           erRequirements=$(grep -i '[EP][0-9][0-9]*:\s' $erPath)
           
