--- a/.github/workflows/CQ-val.yml
+++ b/.github/workflows/CQ-val.yml
@@ -23,7 +23,7 @@ jobs:
           
           echo "$erPath"
           erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
-          erRequirements=$(grep -i '[EP][0-9][0-9]*:\s' $erPath)
+          erRequirements=$(grep -i '[ER][0-9][0-9]*:\s' $erPath)
           echo $erRequirements
           
           base="https://raw.githubusercontent.com/"
