--- a/.github/workflows/CQ-val.yml
+++ b/.github/workflows/CQ-val.yml
@@ -53,7 +53,7 @@ jobs:
           echo $tdPrefix >> cqTemplate.txt 
           echo $tcPrefix >> cqTemplate.txt 
           echo 'tc:01 a owlunit:CompetencyQuestionVerification ; owlunit:hasCompetencyQuestion "' >> cqTemplate.txt 
-          cat cqTemplate.txt
+          
           echo "$cqRequirements" > "cqRequirements.txt"
           while read line; do
             CQid=${line//[!0-9]/}
@@ -61,6 +61,7 @@ jobs:
               CQstrresult=${BASH_REMATCH[1]}
               echo '$CQstrresult "; owlunit:hasSPARQLUnitTest " ' >> cqTemplate.txt 
               echo "$SPARQLquery" > "sparqlCQRequirements.txt"
+              cat cqTemplate.txt
               while read line; do
                 SQid=${line//[!0-9]/}
                 if [[ $line =~ :(.+) ]]; then
@@ -72,7 +73,7 @@ jobs:
                 else
                   echo "No matching SPARQL query"
                 fi
-              done <parqlCQRequirements.txt
+              done <sparqlCQRequirements.txt
             else
               echo "unable to parse string $line"
             fi
