--- a/.github/workflows/CQ-val.yml
+++ b/.github/workflows/CQ-val.yml
@@ -61,25 +61,24 @@ jobs:
               CQstrresult=${BASH_REMATCH[1]}
               echo $CQstrresult >> cqTemplate.txt 
               echo ' "; owlunit:hasSPARQLUnitTest " ' >> cqTemplate.txt 
-              echo "$SPARQLquery" > "sparqlCQRequirements.txt"
-              cat cqTemplate.txt
-              while read line; do
-                SQid=${line//[!0-9]/}
-                if [[ $line =~ :(.+) ]]; then
-                  SQstrresult=${BASH_REMATCH[1]}
-                  if [[ CQid == SQid ]]; then
-                    echo $SQstrresult >> cqTemplate.txt 
-                    cat cqTemplate.txt
-                  fi
-                else
-                  echo "No matching SPARQL query"
-                fi
-              done <sparqlCQRequirements.txt
             else
               echo "unable to parse string $line"
             fi
           done <cqRequirements.txt
           
+          echo "$SPARQLquery" > "sparqlCQRequirements.txt"
+            while read line; do
+              SQid=${line//[!0-9]/}
+              if [[ $line =~ :(.+) ]]; then
+                SQstrresult=${BASH_REMATCH[1]}
+              fi
+            done <sparqlCQRequirements.txt
           
+          if [[ $CQid = $SQid ]]; then
+            echo $SQstrresult >> cqTemplate.txt 
+            cat cqTemplate.txt
+          else
+            echo "No matching SPARQL query"
+          fi
           
-          echo "$var" >> "$destdir"
+        
