--- a/.github/workflows/CQ-val.yml
+++ b/.github/workflows/CQ-val.yml
@@ -57,6 +57,7 @@ jobs:
           echo "$cqRequirements" > "cqRequirements.txt"
           while read line; do
             CQid=${line//[!0-9]/}
+            echo "This is the CQid"
             echo $CQid
             if [[ $line =~ :(.+) ]]; then
               CQstrresult=${BASH_REMATCH[1]}
@@ -70,6 +71,7 @@ jobs:
           echo "$SPARQLquery" > "sparqlCQRequirements.txt"
             while read line; do
               SQid=${line//[!0-9]/}
+              echo "This is the SQid"
               echo $SQid
               if [[ $line =~ :(.+) ]]; then
                 SQstrresult=${BASH_REMATCH[1]}
