--- a/.github/workflows/CQ-val.yml
+++ b/.github/workflows/CQ-val.yml
@@ -57,8 +57,6 @@ jobs:
           echo "$cqRequirements" > "cqRequirements.txt"
           while read line; do
             CQid=${line//[!0-9]/}
-            echo "This is the CQid"
-            echo $CQid
             if [[ $line =~ :(.+) ]]; then
               CQstrresult=${BASH_REMATCH[1]}
               echo $CQstrresult >> cqTemplate.txt 
@@ -71,8 +69,6 @@ jobs:
           echo "$sparqlCQRequirements" > "sparqlCQRequirements.txt"
             while read line; do
               SQid=${line//[!0-9]/}
-              echo "This is the SQid"
-              echo $SQid
               if [[ $line =~ :(.+) ]]; then
                 SQstrresult=${BASH_REMATCH[1]}
               fi
@@ -80,9 +76,26 @@ jobs:
           
           if [[ $CQid = $SQid ]]; then
             echo $SQstrresult >> cqTemplate.txt 
-            cat cqTemplate.txt
+            echo ' " ; owlunit:hasInputData td:CQDataSet.ttl ; owlunit:hasInputTestDataCategory owlunit:ToyDataset ; owlunit:hasExpectedResult " ' >> cqTemplate.txt  
           else
             echo "No matching SPARQL query"
           fi
+          
+          echo "$erRequirements" > "erRequirements.txt"
+            while read line; do
+              ERid=${line//[!0-9]/}
+              if [[ $line =~ :(.+) ]]; then
+                ERstrresult=${BASH_REMATCH[1]}
+              fi
+            done <erRequirements.txt
+            
+          if [[ $CQid = $ERid ]]; then
+            echo $ERstrresult >> cqTemplate.txt 
+            echo ' "; owlunit:testsOntology mp: . ' >> cqTemplate.txt  
+          else
+            echo "No matching expected result"
+          fi
+          
+          cat cqTemplate.txt
           
         
