--- a/.github/workflows/CQ-val.yml
+++ b/.github/workflows/CQ-val.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
         
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout V2
+        uses: actions/checkout@v2
       
       - name: Run CQ validator
         run: |
@@ -98,7 +99,7 @@ jobs:
           
           cat cqTemplate.txt
           cp cqTemplate.txt ontology-network/musical-performance/RecordingProcess/SPARQLUnitTest/CQTestCase/CQTestCase.ttl
-    
+      
       - name: Pull-to-master
         uses: peter-evans/create-pull-request@v3
           
