--- a/.github/workflows/create-IV.yml
+++ b/.github/workflows/create-IV.yml
@@ -1,4 +1,4 @@
-name: Validate CQ
+name: Construct IV test cases
 
 on: push
 
@@ -7,49 +7,80 @@ jobs:
     runs-on: ubuntu-latest
         
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout V2
+        uses: actions/checkout@v2
       
-      - name: Run CQ validator
+      - name: Construct CQ test cases
         run: |
-          cqPath="ontology-network/musical-performance/RecordingProcess/CompetencyQuestions.txt"
-          cqRequirements=$(grep -i '[CQ][0-9][0-9]*:\s' $cqPath)
-          
+          echo "$ivPath"
           ivPath="ontology-network/musical-performance/RecordingProcess/GeneralConstraints.txt"
           ivRequirements=$(grep -i '[IV][0-9][0-9]*:\s' $ivPath)
           
-          epPath="ontology-network/musical-performance/RecordingProcess/GeneralConstraints.txt"
-          epRequirements=$(grep -i '[EP][0-9][0-9]*:\s' $epPath)
-          
+          echo "$sparqlPath"
           sparqlPath="ontology-network/musical-performance/RecordingProcess/SPARQLQueries.txt"
-          sparqlCQRequirements=$(grep -i '[SQCQ][0-9][0-9]*:\s' $sparqlPath)
           sparqlIVRequirements=$(grep -i '[SQIV][0-9][0-9]*:\s' $sparqlPath)
-          
-          erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
-          erRequirements=$(grep -i '[EP][0-9][0-9]*:\s' $erPath)
           
           base="https://raw.githubusercontent.com/"
           base1=$(git config --get remote.origin.url | sed 's/.*\/\([^ ]*\/[^.]*\).*/\1/')
-          echo "$base2"
-          base2="/main/ontology-network/musical-performance/"
-          CQbase="/SPARQLUnitTest/CQTestCase/"
-          echo "$cqtd"
-          cqtd="$base$base1$base2$line$CQbase"
-          cqTemplate="@prefix owlunit: <https://w3id.org/OWLunit/ontology/> . @prefix mp:<> . @prefix td:<> . @prefix tc: <>. tc:xx a owlunit:CompetencyQuestionVerification ; owlunit:hasCompetencyQuestion"
-          ivTemplate=""
-          erTemplate=""
-          echo "$cqRequirements" > "cqRequirements.txt"
+          
+          echo "$MPbase"
+          MPbase="/main/ontology-network/musical-performance/RecordingProcess/RecordingProcess.owl"
+          
+          echo "$tdbase"
+          tdbase="/main/ontology-network/musical-performance/RecordingProcess/InferenceVerificationTest/IVDataSet/"
+          
+          echo "$tcbase"
+          tcbase="/main/ontology-network/musical-performance/RecordingProcess/InferenceVerificationTest/IVTestCase/"
+          
+          echo "$mp"
+          mp="$base$base1$MPbase"
+          
+          echo "$ivtd"
+          ivtd="$base$base1$tdbase"
+          
+          echo "$ivtc"
+          ivtc="$base$base1$tcbase"
+          
+          mpPrefix="@prefix mp: < ${mp} > ."
+          tdPrefix="@prefix td: < ${cqtd} > ."
+          tcPrefix="@prefix mp: < ${cqtc} > ."
+          
+          echo '@prefix owlunit: <https://w3id.org/OWLunit/ontology/> . ' > ivTemplate.txt
+          echo $mpPrefix >> ivTemplate.txt 
+          echo $tdPrefix >> ivTemplate.txt 
+          echo $tcPrefix >> ivTemplate.txt 
+          echo 'tc:xx a owlunit:InferenceVerification ; owlunit:hasInputData td:xx ; owlunit:hasSPARQLUnitTest "' >> cqTemplate.txt 
+          
+          echo "$ivRequirements" > "ivRequirements.txt"
           while read line; do
-            id=${line//[!0-9]/}
-            echo $id
+            IVid=${line//[!0-9]/}
             if [[ $line =~ :(.+) ]]; then
-              strresult=${BASH_REMATCH[1]}
-              echo "$strresult"
-              
+              IVstrresult=${BASH_REMATCH[1]}
             else
               echo "unable to parse string $line"
             fi
-          done <cqRequirements.txt
+          done <ivRequirements.txt
+          
+          echo "$sparqlIVRequirements" > "sparqlIVRequirements.txt"
+            while read line; do
+              SQid=${line//[!0-9]/}
+              if [[ $line =~ :(.+) ]]; then
+                SQstrresult=${BASH_REMATCH[1]}
+              fi
+            done <sparqlIVRequirements.txt
+          
+          if [[ $IVid = $SQid ]]; then
+            echo $SQstrresult >> ivTemplate.txt 
+            echo ' " ; owlunit:hasReasoner owlunit:HermiT ; owlunit:hasExpectedResult true ; owlunit:testsOntology mp: .  ' >> ivTemplate.txt  
+          else
+            echo "No matching SPARQL query"
+          fi
           
           
+          cat cqTemplate.txt
+          cp cqTemplate.txt ontology-network/musical-performance/RecordingProcess/InferenceVerificationTest/IVTestCase/IVTestCase.ttl
+      
+      - name: Pull-to-master
+        uses: peter-evans/create-pull-request@v3
           
-          echo "$var" >> "$destdir"
+        
